Estructura básica, cambio en nombre de class

--- a/calendario.html
+++ b/calendario.html
@@ -7,9 +7,17 @@
    <h1 class="Título">OTAKU COMICS</h1>
    <div class="contenedor"> <!--soy su padre-->
    	 <div class="mes">ENERO</div><!--fin enero-->
-   	 <div class="febrero">FEBRERO </div>
-   	 <div class="febrero">MARZO</div>
-   	 <div class="febrero">ABRIL</div>
+   	 <div class="mes">FEBRERO </div>
+   	 <div class="mes">MARZO</div>
+   	 <div class="mes">ABRIL</div>
+   	 <div class="mes">MAYO</div>
+   	 <div class="mes">JUNIO</div>
+   	 <div class="mes">JULIO</div>
+   	 <div class="mes">AGOSTO</div>
+   	 <div class="mes">SEPTIEMBRE</div>
+   	 <div class="mes">OCTUBRE</div>
+   	 <div class="mes">NOVIEMBRE</div>
+   	 <div class="mes">DICIEMBRE</div>
    </div> <!--fin padre-->
 
  </body>
