--- a/calendario.html
+++ b/calendario.html
@@ -10,10 +10,10 @@
        <img class="imagen" src="https://i.pinimg.com/originals/9e/64/c1/9e64c10c76169859f5586d9912f8ee63.jpg" title="saintia-sho" alt="Atena sama"/>
      </div><!--fin enero-->
        <div class="mes">FEBRERO
-   <img class="imagen" src="https://i.pinimg.com/originals/9e/64/c1/9e64c10c76169859f5586d9912f8ee63.jpg" title="saintia-sho" alt="Atena sama" />  
+   <img class="imagen" src="https://images-na.ssl-images-amazon.com/images/I/61kVGHy6GdL._SX349_BO1,204,203,200_.jpg" title="saintia-sho" alt="Atena sama" />  
     </div>
        <div class="mes">MARZO
-     <img class=imagen  src=""https://i.pinimg.com/originals/9e/64/c1/9e64c10c76169859f5586d9912f8ee63.jpg" title="saintia-sho" alt="Atena sama"" />
+     <img class=imagen  src="https://images-na.ssl-images-amazon.com/images/I/61RKLURgHzL._SX349_BO1,204,203,200_.jpg" title="saintia-sho" alt="Atena sama"" />
      </div>
        <div class="mes">ABRIL
      <img class=imagen  src="https://images-na.ssl-images-amazon.com/images/I/51bP5mbpc0L._SX349_BO1,204,203,200_.jpg"/>
@@ -31,12 +31,16 @@
      <img class=imagen  src="https://imagessl1.casadellibro.com/a/l/t0/51/9788417179151.jpg"/>
      </div>
        <div class="mes">SEPTIEMBRE
-     <img class=imagen  src="https://vignette.wikia.nocookie.net/saintseiya/images/b/ba/Saintia_Sho_Volumen_8_-_Card_1.jpg/revision/latest?cb=20160716071024&path-prefix=es"/>
+     <img class=imagen  src="https://cdn.normacomics.com/media/catalog/product/cache/1/thumbnail/9df78eab33525d08d6e5fb8d27136e95/s/a/saintia-sho-6.jpg"/>
     </div>
-       <div class="mes">OCTUBRE</div>
-       <div class="mes">NOVIEMBRE</div>
-       <div class="mes">DICIEMBRE</div>
+       <div class="mes">OCTUBRE
+        <img class=imagen  src="https://cdn.normacomics.com/media/catalog/product/cache/1/thumbnail/9df78eab33525d08d6e5fb8d27136e95/l/o/los-caballeros-del-zodiaco-saintia-sho-9.jpg"/>             
+          </div>
+       <div class="mes">NOVIEMBRE
+        <img class=imagen  src="https://vignette.wikia.nocookie.net/saintseiya/images/8/89/Saintia_Sh%C5%8D_volumen_8.png/revision/latest?cb=20170226003512&path-prefix=es"/>   
+      </div>
+       <div class="mes">DICIEMBRE             <img class=imagen  src="https://2.bp.blogspot.com/-2cJNggQt9DI/VvYo07V3w5I/AAAAAAAAo4g/Oabf0q1M1YcGWR37rTzNJujuCbc5yrrpg/s1600/01.jpg"/>                
+      </div>
    </div> <!--fin padre-->
-
  </body>
 </html>
