Ajustes en textos

--- a/calendario.html
+++ b/calendario.html
@@ -4,11 +4,15 @@
 
  </head>
  <body> 
-   <h1 class="Título">OTAKU COMICS</h1>
-   <div class="contenedor"> <!--soy su padre-->
-       <div class="mes">ENERO
+   <h1 class="Título">SAINTIA SHO</h1>
+   <div class="contenedor" ontouchstart="this.classList.toggle('hover');"> <!--soy su padre-->
+    <div class="flipper">
+       <div class="mes">ENERO <!--parte frontal-->
        <img class="imagen" src="https://i.pinimg.com/originals/9e/64/c1/9e64c10c76169859f5586d9912f8ee63.jpg" title="saintia-sho" alt="Atena sama"/>
      </div><!--fin enero-->
+      <div class="back"> Shoko san conoce su pasado y la razón por la que Kyoko decidió convertirse en saintia
+      </div><!--fin de back-->
+     </div> <!--fin flipper-->
        <div class="mes">FEBRERO
    <img class="imagen" src="https://images-na.ssl-images-amazon.com/images/I/61kVGHy6GdL._SX349_BO1,204,203,200_.jpg" title="saintia-sho" alt="Atena sama" />  
     </div>
